Encryption for bridge (WIP)